# single-page-web-server-rs

./: Cargo.toml  Makefile  README.md  cargo.toml
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: bench.rs
docker/: Dockerfile.static
src/: cli.rs  lib.rs  main.rs  metrics.rs  server.rs  tls.rs
tests/: args.rs  integration.rs  integration_test.rs  memory_test.rs  metrics.rs  metrics_test.rs
