[package]
name = "single-page-web-server-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
md5 = "0.7"
httpdate = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
flate2 = "1.0"

[workspace.metadata.dist]
cargo-dist-version = "0.8.1"
rust-toolchain-version = "1.75"
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
ci = ["github"]
installers = ["shell", "powershell"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.2"