[package]
name = "single-page-web-server-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
md5 = "0.7"
httpdate = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry-prometheus = "0.17"
opentelemetry_sdk = { version = "0.24", features = ["metrics", "rt-tokio"] }
prometheus = "0.13"
rcgen = "0.11"
rustls = "0.21"
tokio-rustls = "0.24"
time = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }

[workspace.metadata.dist]
cargo-dist-version = "0.8.1"
rust-toolchain-version = "1.75"
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
ci = ["github"]
installers = ["shell", "powershell"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.2"
temp-env = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
memoffset = "0.9"

[[bench]]
name = "bench"
harness = false